# sundial

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.bat  run.bat
.claude/projects/d--src-sundial/memory/: MEMORY.md  hdr-video-recording.md
.github/workflows/: release.yml
src/: About.cpp  About.h  Clipboard.cpp  Clipboard.h  Editor.cpp  Editor.h  Encoder.cpp  Encoder.h  HdrCapture.cpp  HdrCapture.h  ImageOps.cpp  ImageOps.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  ShaderTonemap.cpp  ShaderTonemap.h  ShellIntegration.cpp  ShellIntegration.h  Toast.cpp  Toast.h  Tonemap.cpp  Tonemap.h  Toolbar.cpp  Toolbar.h  TrayIcon.cpp  TrayIcon.h  Updater.cpp  Updater.h  Version.cpp  Version.h  VideoRecorder.cpp  VideoRecorder.h  main.cpp  sundial.rc
tools/: release.ps1  setup-velopack.ps1
